-- Replaced ng-table with a home-grown option using just regular templates and angular bootstrap. This gives me more control over appearance, and the control I need to let the user move around between views in the browser history. -- home-grown table required a little infrastructure, but not too much. -- Fixed browser history bug, which kept the grid from updating when the query params changed.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -59,19 +59,35 @@ header {
     overflow: auto;
 }
 
-.items-table .ng-table-pagination {
-    margin: 0px;
+.items-table .pagination {
+    float: left;
 }
 
-.items-table .ng-table-pager {
-    padding-right: 0.5em;
-    padding-top: 0.5em;
+.items-table .paginators:after {
+    clear: both;
+}
+
+.items-table .paginators label {
+    padding-left: 5em;
+    line-height: 2em;
 }
 
 .items-table td, th {
     min-width: 20em;
     max-width: 20em;
     padding-left: 0.5em;
+}
+
+.items-table th {
+    text-align: center;
+}
+
+.items-table th.sortable {
+    cursor: default;
+}
+
+.items-table th.sort-asc, th.sort-desc {
+    background-color: #428BCA;
 }
 
 .items-table tr {
